--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,8 @@ body {
 }
 .primary-item__img {
     transition: all 0.5s;
+    overflow: hidden;
+    position: relative;
 }
 .primary-item__img-1 {
     position: absolute;
@@ -361,35 +363,39 @@ body {
     position: relative;
     margin: 20px auto 5px auto;
     border: 2px solid #f19e1f;
+    position: relative;
+    overflow: hidden;
+    transition: all 0.3s;
 }
 .primary-product__btn-link{
     text-decoration: none;
     font-size: 1rem;
     color: #1565c0;
+    z-index: 100;
 }
 
 .primary-product__btn::before {
     content: "";
     position: absolute;
     top: 2%;
-    left: 17%;
-    width: 130px;
-    height: 0;
+    left: 0%;
+    width: 100%;
+    height: 0%;
     border-radius: 50px;
     background: #0d59af;
-    opacity: 0;
-    z-index: 1;
-    transition: ease-in-out 0.5s;
+    z-index: 0;
+    transition: ease-in-out 0.3s;
 }
-/* .primary-product__btn-link:hover .primary-product__btn{
-   
+.primary-product__btn:hover{
     border: 1px solid #1565c0;
 }
-.primary-product__btn-link:hover.primary-product__btn-link::before{
-    opacity: 1;
-    height: 50px;
+.primary-product__btn:hover.primary-product__btn::before{
+    height: 100%;
     z-index: 0;
-} */
+}
+.primary-product__btn:hover .primary-product__btn-link{
+    color: #fff;
+}
 .ridben-1 {
     position: absolute;
     top: 15%;
@@ -442,10 +448,10 @@ body {
     color: #fff;
     text-align: center;
 }
-/* .primary-product-item__link:hover .primary-item__img-1 {
-    opacity: 0;
+.primary-product-item__link:hover .primary-item__img-1 {
+    /* opacity: 0; */
     transform: translateX(-100%);
-} */
+}
 .ridben-3 {
     position: absolute;
     top: 15%;
